update html semantic markup

--- a/ace/index.html
+++ b/ace/index.html
@@ -30,29 +30,34 @@
         <li><a href="#data">data recovery</a></li>
         <li><a href="#networks">networks</a></li>
         <li><a title="contact us" href="#contact">contact</a></li>
-      </ul><!-- END top-nav -->
-    </nav><!-- END nav -->
+      </ul><!-- .top-nav -->
+    </nav><!-- nav #top-->
 
-    <section class="hero-container">
+    <div class="hero-container">
       <div class="overlay">
 
         <div id="logo">
-          <img src="img/ace-logo.png" width="180" height="180" alt="A company logo">
-        </div><!-- END logo -->
+          <picture>
+            <img src="img/ace-logo.png" width="180" height="180" alt="A company logo">
+          </picture>
+        </div><!-- #logo -->
 
         <div class="header-text">
-          <h1 class="site-title">A<span class="smcaps">ce</span> C<span class="smcaps">omputer</span></h1>
-          <h2 class="site-description">PC Repair & Networking Specialists</h2>
-          <h3 class="site-description">1271 Elm Street | Manchester, NH 03103</h3>
-          <h3 class="site-description phone"><a title="call us" href="tel:603-669-3022">(603) 669-3022</a></h3>
-        </div><!-- END header-text -->
+          <address>
+            <h1 class="site-title">A<span class="smcaps">ce</span> C<span class="smcaps">omputer</span></h1>
+            <h2 class="site-description">PC Repair & Networking Specialists</h2>
+            <h3 class="site-description">1271 Elm Street | Manchester, NH 03103</h3>
+            <h3 class="site-description phone"><a title="call us" href="tel:603-669-3022">(603) 669-3022</a></h3>
+          </address>
+        </div><!-- .header-text -->
 
-      </div><!-- END overlay -->
-    </section><!-- END hero-container -->
+      </div><!-- .overlay -->
+    </div><!-- .hero-container -->
 
-  </header><!-- END header -->
+  </header><!-- header .header -->
 
-  <section class="main">
+  <main class="main">
+
     <h1 id="repair" class="initial-char-limit-25"><span class="material-symbols-outlined">vital_signs</span>Computer &amp; Laptop Repair, Data Recovery, Spyware, Virus Removal</h1>
 
     <h2 class="initial-char-limit-25">ACE Computer Manchester NH Computer Network Specialists</h2>
@@ -78,7 +83,7 @@
       <li><a href="#contact">Emergency</a> services</li>
       <li>Website design &amp hosting</li>
       <li>We install &amp; service all Microsoft Windows platforms as well as Mac OSX</li>
-    </ul><!-- END about-list -->
+    </ul><!-- .about-list -->
 
     <h2>Save With On-Site Computer Repair</h2>
 
@@ -156,13 +161,13 @@
     <div class="main-bottom">
       <h2 class="g-icon"><span class="material-symbols-outlined">schedule</span>Office Hours</h2>
 
-      <p class="last">Monday - Friday : 8:30AM to 5:30PM<br />
+      <p class="last">Monday - Friday : 8:30AM to 5:30PM<br>
         Saturday : 10:00AM to 12:30PM</p>
 
       <h2 class="g-icon"><span class="material-symbols-outlined">contact_support</span>Reach Out To Us</h2>
 
-      <p class="last">Phone: <a title="call us" href="tel:603-669-3022">(603) 669-3022</a><br />
-        Emergency: <a title="emergencies only" href="tel:603-235-2752">(603) 235-2752</a><br />
+      <p class="last">Phone: <a title="call us" href="tel:603-669-3022">(603) 669-3022</a><br>
+        Emergency: <a title="emergencies only" href="tel:603-235-2752">(603) 235-2752</a><br>
         Fax: (603) 669-3420</p>
 
       <h2 class="g-icon"><span class="material-symbols-outlined">mail</span>Yes, You Can Email Us Too</h2>
@@ -175,31 +180,35 @@
 
       <h2 class="g-icon"><span class="material-symbols-outlined">location_on</span>Location / Directions</h2>
 
-      <p>1271 Elm Street<br />
-        Manchester, NH 03103</p>
-      <iframe id="map" title="google map of location" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2918.150190108867!2d-71.46517013952003!3d42.99617194410063!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89e24f253d262bdd%3A0x74f4cf4de4424a82!2sAce%20Computer!5e0!3m2!1sen!2sus!4v1670453409934!5m2!1sen!2sus" allowfullscreen="yes" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+      <address>
+        <p>1271 Elm Street<br>
+          Manchester, NH 03103</p>
+        <iframe id="map" title="google map of location" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2918.150190108867!2d-71.46517013952003!3d42.99617194410063!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89e24f253d262bdd%3A0x74f4cf4de4424a82!2sAce%20Computer!5e0!3m2!1sen!2sus!4v1670453409934!5m2!1sen!2sus" allowfullscreen="yes" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+      </address>
+    </div><!-- .main-bottom -->
 
-    </div><!-- END main-bottom -->
-  </section><!-- END main -->
+  </main><!-- main .main -->
 
   <footer id="footer">
 
     <div class="footer-info">
-      <p>&copy;2003-<span id="year"></span> <a title="top of page" href="#">ACE Computer</a></p>
-      <p>1271 Elm Street &nbsp;|&nbsp; Manchester, NH 03103</p>
-      <p><a title="call us" href="tel:603-669-3022">(603) 669-3022</a></p>
-    </div><!-- END footer-info -->
+      <address>
+        <p>&copy;2003-<span id="year"></span> <a title="top of page" href="#">ACE Computer</a></p>
+        <p>1271 Elm Street &nbsp;|&nbsp; Manchester, NH 03103</p>
+        <p><a title="call us" href="tel:603-669-3022">(603) 669-3022</a></p>
+      </address>
+    </div><!-- .footer-info -->
 
     <div class="privacy-terms">
       <p><a href="#">Privacy Policy</a></p>
       <p><a href="#">Terms &amp; Conditions</a></p>
-    </div><!-- END privacy-terms -->
+    </div><!-- .privacy-terms -->
 
-  </footer><!-- END footer -->
+  </footer><!-- footer #footer -->
 
   <script>
     document.getElementById("year").innerHTML = new Date().getFullYear();
   </script>
-</body><!-- END body -->
+</body><!-- body -->
 
 </html>
