--- a/ace/index.html
+++ b/ace/index.html
@@ -8,10 +8,10 @@
   <meta name="description" content="ACE Computer is a PC / laptop repair &amp; network consulting firm located in Manchester, New Hampshire">
   <meta name="robots" content="noindex">
   <title>ACE Computer | Computer Laptop Repair Network Specialist | Manchester, NH | (603) 669-3022</title>
-  <link rel="preload" href="https://fonts.googleapis.com">
-  <link rel="preload" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Dorsa&family=Quicksand" rel="stylesheet">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&display=swap" />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&display=swap">
   <link rel="stylesheet" media="screen" href="css/styles.css">
   <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
@@ -43,12 +43,10 @@
         </div><!-- #logo -->
 
         <div class="header-text">
-          <address>
-            <h1 class="site-title">A<span class="smcaps">ce</span> C<span class="smcaps">omputer</span></h1>
-            <h2 class="site-description">PC Repair & Networking Specialists</h2>
-            <h3 class="site-description">1271 Elm Street | Manchester, NH 03103</h3>
-            <h3 class="site-description phone"><a title="call us" href="tel:603-669-3022">(603) 669-3022</a></h3>
-          </address>
+          <h1 class="site-title">A<span class="smcaps">ce</span> C<span class="smcaps">omputer</span></h1>
+          <h2 class="site-description">PC Repair & Networking Specialists</h2>
+          <h3 class="site-description">1271 Elm Street | Manchester, NH 03103</h3>
+          <h3 class="site-description phone"><a title="call us" href="tel:603-669-3022">(603) 669-3022</a></h3>
         </div><!-- .header-text -->
 
       </div><!-- .overlay -->
@@ -81,7 +79,7 @@
       <li><a href="#data">Data Recovery</a></li>
       <li>PC &amp; Mac rentals.</li>
       <li><a href="#contact">Emergency</a> services</li>
-      <li>Website design &amp hosting</li>
+      <li>Website design &amp; hosting</li>
       <li>We install &amp; service all Microsoft Windows platforms as well as Mac OSX</li>
     </ul><!-- .about-list -->
 
@@ -172,7 +170,7 @@
 
       <h2 class="g-icon"><span class="material-symbols-outlined">mail</span>Yes, You Can Email Us Too</h2>
 
-      <p class="last">Email your computer related problems &amp; questions to: <a title="email us" href="mailto:blankemailfornow@email.com?subject=from ACE website &body=this is my problem...">blankemailfornow@email.com</a></p>
+      <p class="last">Email your computer related problems &amp; questions to: <a title="email us" href="mailto:blankemail@email.com">blankemail@email.com</a></p>
 
       <h2 class="g-icon"><span class="material-symbols-outlined">paid</span>Payment Options</h2>
 
@@ -183,7 +181,7 @@
       <address>
         <p>1271 Elm Street<br>
           Manchester, NH 03103</p>
-        <iframe id="map" title="google map of location" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2918.150190108867!2d-71.46517013952003!3d42.99617194410063!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89e24f253d262bdd%3A0x74f4cf4de4424a82!2sAce%20Computer!5e0!3m2!1sen!2sus!4v1670453409934!5m2!1sen!2sus" allowfullscreen="yes" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <iframe id="map" title="google map of location" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2918.150190108867!2d-71.46517013952003!3d42.99617194410063!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89e24f253d262bdd%3A0x74f4cf4de4424a82!2sAce%20Computer!5e0!3m2!1sen!2sus!4v1670453409934!5m2!1sen!2sus" allow="fullscreen" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
       </address>
     </div><!-- .main-bottom -->
 
