add w3c valid tag

--- a/ace/index.html
+++ b/ace/index.html
@@ -200,6 +200,9 @@
     <div class="privacy-terms">
       <p><a href="#">Privacy Policy</a></p>
       <p><a href="#">Terms &amp; Conditions</a></p>
+      <p><a href="https://jigsaw.w3.org/css-validator/check/referer">
+          <img style="border:0;width:88px;height:31px" src="https://jigsaw.w3.org/css-validator/images/vcss-blue" alt="Valid CSS!"></a>
+      </p>
     </div><!-- .privacy-terms -->
 
   </footer><!-- footer #footer -->
